JumpScript/tests/baselines/reference/unusedImports9.errors.txt
tests/cases/compiler/file2.jump(1,8): error TS6133: 'c' is declared but its value is never read.


==== tests/cases/compiler/file2.jump (1 errors) ====
    import c = require('./file1')
           ~
!!! error TS6133: 'c' is declared but its value is never read.
==== tests/cases/compiler/file1.jump (0 errors) ====
    export class Calculator {
        handleChar() {}
    }
    
    export function test() {
    
    }
    
    export function test2() {
    
    }
    